# local-webpage-access

./: .gitignore  PRODUCT.md  README.md  pyproject.toml  task-list.md  task-list.sync-conflict-20260709-222909-7ZQPY5X.md
design/achievement/: 2026-07-10-logo-svg-design.md  local-webpage-access-analysis-20260707.md  local-webpage-access-caddy-startup-diagnostic-report-20260708.md  local-webpage-access-caddy-startup-incident-20260708.md  local-webpage-access-gateway-switch-access-review-20260709.md  local-webpage-access-startup-failure-20260708.md  local-webpage-access-v1-wbs-20260704.md
design/discussion/: local-webpage-access-设计意见-20260703.md
design/plan/: local-webpage-access-imp010-021-plan-20260707.md  local-webpage-access-runtime-analysis-20260707.md  local-webpage-access-整改与开发WBS-20260708.md  local-webpage-access-新增功能点2607.md  待改进功能点记录-20260706.md
docs/: acceptance-checklist.md  autostart.md  faq.md  known-limitations.md  manager-page.md  operations-playbook.md  release-checklist.md  runtime-workspace.md  security-boundary.md  testing.md
docs/discussion/: local-web-access-proposal-20260703.md  local-web-access-方案-20260703.md  local-web-access-设计意见-20260703.md  (+1 more)
scripts/: pack-release-zip.sh
tests/: _helpers.py  conftest.py  test_access.py  test_access_workflow.py  test_autostart.py  test_build_process.py  test_build_queue.py  test_capability.py  test_compose.py  test_config.py  test_daemon.py  test_docker_integration.py  test_docker_runtime.py  test_dockerfile_templates.py  test_doctor.py  test_e2e_acceptance.py  test_fixtures.py  test_gateway_service.py  test_gateway_switch.py  test_health_status.py  test_host_bootstrap.py  test_host_container.py  test_hosting.py  test_importer.py  test_init.py  test_install_docker_scripts.py  test_integration_phase57.py  test_lifecycle.py  test_logs.py  test_manager_api.py  test_manager_api.sync-conflict-20260709-223006-G2PLRGF.py  test_manager_service.py  test_manager_static_app.py  test_models.py  test_pack_release_zip.py  test_pageviews.py  test_paths.py  test_platform_support.py  test_ports.py  test_registry.py  (+11 more)
(+150 files in other folders)
