[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-web-access"
version = "0.1.0"
description = "Local Web Access — 面向局域网小主机的本地网页部署基座"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "fenix-wangminle" }]
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
lwa = "local_web_access.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/local_web_access"]

[tool.hatch.build.targets.wheel.force-include]
"src/local_web_access/templates" = "local_web_access/templates"
"src/local_web_access/manager_static" = "local_web_access/manager_static"
"src/local_web_access/skills" = "local_web_access/skills"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py313"
