[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-webpage-access"
version = "0.5.1"
description = "Local Webpage Access — 面向局域网小主机的本地网页部署基座"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "fenix-wangminle" }]
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "fastapi>=0.138.0",
    "uvicorn>=0.45.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
lwa = "local_webpage_access.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/local_webpage_access"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py313"
